<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back78">
    <Button android:layout_width="wrap_content" android:text="@string/text_cancel" android:onClick="cancel" android:layout_height="wrap_content" android:id="@+id/button2" android:layout_below="@+id/money_pt_edit" android:layout_alignRight="@+id/receiver_accnoedit" android:layout_marginRight="56dp"></Button>
    <TextView android:layout_width="wrap_content" 
    			android:id="@+id/money_pts" 
    			android:text="@string/text_money_pts" 
    			android:textAppearance="?android:attr/textAppearanceMedium" 
    			android:layout_height="wrap_content" 
    			android:layout_above="@+id/money_pt_edit" 
    			android:layout_alignLeft="@+id/receiver_acc_no">
    			</TextView>
    <EditText android:layout_height="wrap_content" 
    			android:textSize="16sp" 
    			android:textStyle="bold" 
    			android:inputType="text" 
    			android:id="@+id/receiver_accnoedit" 
    			android:layout_width="fill_parent" 
    			android:layout_above="@+id/money_pts" 
    			android:layout_centerHorizontal="true" 
    			android:layout_marginBottom="28dp" 
    			android:layout_marginLeft="10dip" 
    			android:layout_marginRight="10dip">
    			</EditText>
    <TextView android:layout_height="wrap_content" android:id="@+id/receiver_acc_no" android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/text_receiver_accno" android:layout_width="wrap_content" android:layout_above="@+id/receiver_accnoedit" android:layout_alignParentLeft="true" android:layout_marginLeft="25dp"></TextView>
    
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_above="@+id/receiver_acc_no" android:layout_alignLeft="@+id/receiver_acc_no" android:layout_marginBottom="76dp" android:id="@+id/text_sender" android:text="Accout No." />
    
    <EditText android:inputType="text" android:textStyle="bold" android:layout_height="wrap_content" android:id="@+id/edit_sender" android:layout_width="fill_parent" android:layout_above="@+id/receiver_acc_no" android:layout_alignLeft="@+id/receiver_accnoedit" android:layout_marginBottom="23dp" android:enabled="false"> 
    <requestFocus></requestFocus> </EditText>
    <Button android:text="@string/text_share" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/share" android:onClick="callShareMoneyWebMethod" android:layout_alignParentBottom="true" android:layout_alignLeft="@+id/money_pts"></Button>
    <EditText android:layout_width="wrap_content" android:textStyle="bold" android:id="@+id/money_pt_edit" android:layout_height="wrap_content" android:layout_above="@+id/share" android:layout_alignLeft="@+id/receiver_accnoedit" android:layout_marginBottom="34dp" android:layout_alignRight="@+id/receiver_accnoedit"></EditText>  
    
    
   	
</RelativeLayout>